Refactored the remove method in Users to return a mutable list with .collect(Collectors.toList) insteand of .toList()