@@ -1,12 +1,11 @@
 package org.mnjaay.model;
 
-import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Users implements Serializable {
-    @Serial
     private static final long serialVersionUID = 5684699198488893428L;
 
     private List<User> users;
@@ -21,7 +20,8 @@ public class Users implements Serializable {
 
     public void remove(int id) {
         setUsers(
-                this.users.stream().filter(u -> u.getId() != id).toList()
+                this.users.stream().filter(u -> u.getId() != id)
+                        .collect(Collectors.toList())
         );
     }
 
